Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19501

BUG: unable to handle kernel NULL pointer in mdd_changelog_ns_store

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      Oops due to target=NULL in mdd_changelog_ns_store()

      
      [209180.104102] BUG: unable to handle kernel NULL pointer dereference at 0000000000000000
      [209180.107602] PGD 0 P4D 0 
      [209180.108464] Oops: 0000 [#1] SMP NOPTI
      [209180.109262] CPU: 12 PID: 44805 Comm: mdt03_041 Kdump: loaded Tainted: G           OE     -------- -  - 4.18.0-553.71.1.el8_lustre.ddn17.x86_64 #1
      [209180.111184] Hardware name: DDN SFA200NVXE, BIOS 1.16.3-20250723_202142-72a82f624f3c 04/01/2014
      [209180.112543] RIP: 0010:mdd_changelog_ns_store+0x85c/0xe30 [mdd]
      [209180.113925] Code: e9 a9 fa ff ff 31 c9 41 f6 47 21 02 74 0a 41 8b 4f 64 c1 e9 17 83 e1 01 48 8b 45 88 41 8b 76 08 4c 8b 85 58 ff ff ff 49 8b 3e <48> 8b 10 e8 cc 63 ff ff 41 89 c3 85 c0 0f 84 ac 05 00 00 bf 01 00
      [209180.116776] RSP: 0018:ffffbcddb0143ac8 EFLAGS: 00010246
      [209180.117998] RAX: 0000000000000000 RBX: ffff960a7aa65d40 RCX: 0000000000000000
      [209180.119196] RDX: ffffffffff000000 RSI: 000000000000001b RDI: ffff960a073dfee0
      [209180.120738] RBP: ffffbcddb0143b78 R08: ffff961d7fc4e070 R09: ffff961d7fc4e070
      [209180.121932] R10: ffffbcddb0143b88 R11: 0000000000000000 R12: ffff9609d870ec00
      [209180.123460] R13: 0000000000000006 R14: ffff960de83ca3e8 R15: ffff960b3b062800
      [209180.124649] FS:  0000000000000000(0000) GS:ffff962da9d00000(0000) knlGS:0000000000000000
      [209180.126134] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [209180.127155] CR2: 0000000000000000 CR3: 000000099d810005 CR4: 0000000000770ee0
      [209180.128330] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [209180.129532] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
      [209180.130967] PKRU: 55555554
      [209180.131589] Call Trace:
      [209180.132296]  ? __die_body+0x1a/0x60
      [209180.133163]  ? no_context+0x1ba/0x3f0
      [209180.133890]  ? __bad_area_nosemaphore+0x157/0x180
      [209180.134938]  ? do_page_fault+0x37/0x12d
      [209180.135674]  ? page_fault+0x1e/0x30
      [209180.136526]  ? mdd_changelog_ns_store+0x85c/0xe30 [mdd]
      [209180.137454]  ? mdd_changelog_ns_store+0x237/0xe30 [mdd]
      [209180.138573]  ? lod_attr_set+0x2ac/0x8b0 [lod]
      [209180.139457]  mdd_unlink+0x847/0xc90 [mdd]
      [209180.140406]  mdt_reint_unlink+0xed1/0x12c0 [mdt]
      [209180.141354]  mdt_reint_rec+0x127/0x260 [mdt]
      [209180.142167]  mdt_reint_internal+0x4ac/0x7a0 [mdt]
      [209180.143185]  mdt_reint+0x5e/0x100 [mdt]
      [209180.143919]  tgt_request_handle+0xc9c/0x1970 [ptlrpc]
      [209180.145139]  ? ptlrpc_nrs_req_get_nolock0+0xff/0x1f0 [ptlrpc]
      [209180.146446]  ? ptlrpc_update_export_timer+0x3d/0x520 [ptlrpc]
      [209180.147449]  ptlrpc_server_handle_request+0x25a/0xca0 [ptlrpc]
      [209180.148739]  ? lprocfs_counter_add+0x10e/0x180 [obdclass]
      [209180.149821]  ptlrpc_main+0xb45/0x13a0 [ptlrpc]
      [209180.150854]  ? __schedule+0x2d9/0x870
      [209180.151530]  ? ptlrpc_register_service+0xf30/0xf30 [ptlrpc]
      [209180.152719]  kthread+0x134/0x150
      [209180.153350]  ? set_kthread_struct+0x50/0x50
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: