LU-19501 mdd: check target in mdd_changelog_ns_store

when lfs rm_entry is being processed, target object (and it's fid)
is not defined, we can't use it. use 0-fid instead.

Otherwise mdd_object_fid() will dereference the invalid FID and crash:

  BUG: unable to handle kernel NULL pointer dereference at 0000000000
  CPU: 12 PID: 44805 Comm: mdt03_041  4.18.0-553.71.1.el8.x86_64 #1
  RIP: 0010:mdd_changelog_ns_store+0x85c/0xe30 [mdd]
  Call Trace:
    mdd_unlink+0x847/0xc90 [mdd]
    mdt_reint_unlink+0xed1/0x12c0 [mdt]
    mdt_reint_rec+0x127/0x260 [mdt]
    mdt_reint_internal+0x4ac/0x7a0 [mdt]
    mdt_reint+0x5e/0x100 [mdt]
    tgt_request_handle+0xc9c/0x1970 [ptlrpc]
    ptlrpc_server_handle_request+0x25a/0xca0 [ptlrpc]
    ptlrpc_main+0xb45/0x13a0

Fixes: cc7d9d04d6c ("LU-18087 enc: support encrypted names in changelogs")
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I9317120cd93894d882875825f262c5e54b2dbb69
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61921
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>